fixed z-index of navbar

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 
 nav {
+  z-index: 999;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
